Fixed layout issues again...

--- a/src/screens/Contact/ContactGit/ContactGit.css
+++ b/src/screens/Contact/ContactGit/ContactGit.css
@@ -32,7 +32,8 @@
     border: 2px solid rgb(208, 212, 217);
     background-color: rgb(255, 255, 255);
     width: 80%;
-    height: 50px;
+    /* height: 50px; */
+    padding: 4px;
     transition: linear 0.2s;
     border-radius: 5px;
 }
@@ -85,17 +86,14 @@
         width: 70%;
     }
     .contactGitProfileCommitBox {
-        height: 80px;
         width: 100%;
+        flex-direction: column;
+    }
+    .contactGitProfileCommitBoxRight {
+        margin-top: 4px;
+        margin-bottom: 4px;
     }
     .contactGitProfileCommitWrapper {
         padding-top: 100px;
-    }
-}
-
-@media screen and (max-width: 500px) {
-    .contactGitProfileCommitBox {
-        height: 100px;
-        width: 100%;
     }
 }
